<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/text_label_title"
            />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="Company"
            />

        <TextView
            android:id="@+id/tv_how_to_apply_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_company"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/text_label_how_to_apply"
            />

        <TextView
            android:id="@+id/tv_how_to_apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_how_to_apply_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="How to apply"
            />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_how_to_apply"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/text_label_description"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Description"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
